/*
 * SPDX-License-Identifier: AGPL-3.0-only
 *
 * Open Digital Public Infrastructure (DPI) Platform
 * Copyright (C) 2025 Open Digital Public Infrastructure (DPI) Platform Contributors
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, version 3 of the License.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.
 */
plugins {
    alias(libs.plugins.spring.boot) apply false
    alias(libs.plugins.spring.dependency.management) apply false
    alias(libs.plugins.lombok) apply false
    alias(libs.plugins.protobuf) apply false
    alias(libs.plugins.graalvm.native) apply false
}

subprojects {
    group = 'com.examplatform'

    repositories {
        mavenCentral()
    }

    plugins.withType(JavaPlugin) {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(21)
            }
        }

        tasks.withType(JavaCompile).configureEach {
            options.compilerArgs.add('-parameters')
        }
    }

    plugins.withId('org.springframework.boot') {
        tasks.named('jar') {
            enabled = true
        }
    }

    plugins.withId('org.graalvm.buildtools.native') {
        graalvmNative {
            binaries {
                main {
                    imageName = project.name
                    buildArgs.addAll([
                        '-H:+ReportExceptionStackTraces',
                        '-H:+AddAllCharsets',
                        '--enable-preview',
                        '--initialize-at-build-time=org.slf4j.LoggerFactory,org.slf4j.helpers.Reporter'
                    ])
                }
            }
        }
    }
}
